--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,12 @@ body {
   height: 35px;
 }
 
-
 .text-box {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .heading-primary {
@@ -83,6 +83,7 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+  margin-bottom: 60px;
 
   /* animation-name: moveInRight;
   animation-duration: 2s;
@@ -122,4 +123,31 @@ body {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+/* btn */
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all 0.2s; /* for simple animations */
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  /* box-shadow - x, y shaow value, color value */
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: (0 5px 10px rgba(0, 0, 0, 0.2));
+}
+
+.btn-white {
+  background: #fff;
+  color: #777;
 }
