--- a/css/style.css
+++ b/css/style.css
@@ -3,176 +3,131 @@
     medium green : #55c57a
     dark green : #28b485
 */
-
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   /*   font-size: 16px; */
   line-height: 1.7;
   color: #777;
-  padding: 3rem;
-}
+  padding: 3rem; }
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(128, 214, 113, 0.8),
-      rgba(40, 180, 133, 0.8)
-    ),
-    url("../images/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../images/hero.jpg");
   background-size: cover;
   background-position: top;
   /* clip-path: polygon(x y, x y, x y); */
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative;
-}
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-}
-
-.header__logo {
-  height: 3.5rem;
-}
-
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
-
-  backface-visibility: hidden; /* hide backface visiblility */
-}
-
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 1.75rem;
-
-  /* In-order to animation work, we need declare below 2 properties */
-  animation-name: moveInLeft;
-  animation-duration: 2s;
-
-  animation-timing-function: ease-out;
-
-  /* animation delay 
-  animation-delay: 2s; */
-
-  /* animation iteration count make animation run 3 times 
-  animation-iteration-count: 3; */
-}
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 17.4px;
-  margin-bottom: 6rem;
-
-  /* animation-name: moveInRight;
-  animation-duration: 2s;
-
-  animation-timing-function: ease-out; */
-
-  animation: moveInRight 2s ease-out;
-}
+  backface-visibility: hidden;
+  /* hide backface visiblility */ }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 1.75rem;
+    /* In-order to animation work, we need declare below 2 properties */
+    animation-name: moveInLeft;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    /* animation delay 
+      animation-delay: 2s; */
+    /* animation iteration count make animation run 3 times 
+      animation-iteration-count: 3; */ }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 17.4px;
+    margin-bottom: 6rem;
+    /* animation-name: moveInRight;
+      animation-duration: 2s;
+    
+      animation-timing-function: ease-out; */
+    animation: moveInRight 2s ease-out; }
 
 /* header animation */
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem);
-  }
-
+    transform: translateX(-10rem); }
   80% {
-    transform: translateX(2rem);
-  }
+    transform: translateX(2rem); }
   100% {
     opacity: 1;
-    transform: translate(0);
-  }
-}
+    transform: translate(0); } }
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10rem);
-  }
-
+    transform: translateX(10rem); }
   80% {
-    transform: translateX(-1rem);
-  }
-
+    transform: translateX(-1rem); }
   100% {
     opacity: 1;
-    transform: translateX(0);
-  }
-}
+    transform: translateX(0); } }
 
 @keyframes moveInButton {
   0% {
     opacity: 0;
-    transform: translateY(3rem);
-  }
-
+    transform: translateY(3rem); }
   100% {
     opacity: 1;
-    transform: translateY(0);
-  }
-}
+    transform: translateY(0); } }
 
 /* btn */
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
   display: inline-block;
   border-radius: 10rem;
-  transition: all 0.2s; /* for simple animations */
-  position: relative;
-}
+  transition: all 0.2s;
+  /* for simple animations */
+  position: relative; }
 
 .btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-  /* box-shadow - x, y shaow value, color value */
-}
+  /* box-shadow - x, y shaow value, color value */ }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
 
 .btn:active {
   transform: translateY(-1rem);
-  box-shadow: (0 0.5rem 1rem rgba(0, 0, 0, 0.2));
-}
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
-.btn--btn-white {
+.btnbtn--white {
   background: #fff;
-  color: #777;
-}
+  color: #777; }
+  .btnbtn--white::after {
+    background-color: #fff; }
 
-/* using :after psuedo element 
-  1. psuedo element allows us to style certain parts
-  2. In ::after psuedo element add an virtual element right after the main element 
-     and we can style it
-*/
 .btn::after {
   content: "";
   display: inline-block;
@@ -183,22 +138,24 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all 0.4s;
-}
+  transition: all 0.4s; }
 
-.btn-white::after {
-  background-color: #fff;
-}
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.btn--btn-animated {
+.btn--animated {
   animation: moveInButton 0.5s ease-out 0.75s;
   /* the last .75s is for animation delay */
-
   animation-fill-mode: backwards;
-  /* animatin 0% will be applied before animation starts */
+  /* animatin 0% will be applied before animation starts */ }
+
+/* .btn:hover {
 }
+
+.btn:active {
+}
+
+.btn--btn-white {
+} */
+/* using :after psuedo element 
+    1. psuedo element allows us to style certain parts
+    2. In ::after psuedo element add an virtual element right after the main element 
+       and we can style it
+  */
